--- a/index.html
+++ b/index.html
@@ -63,20 +63,24 @@
             </div>
         </div>
         <div>
-            <div>
-            <p class="">THE BEST GIFTS</p>
-            <h3>Our Awesome Portfolio</h3>
-            <p>Check our best products.You can fine awesome product here.</p>
+            <p class="gift">THE BEST GIFTS</p>
+            <h3 class="portfolio"><b>Our Awesome Portfolio</b></h3>
+            <p class="product">Check our best products.You can fine awesome product here.</p>
             </div>
+        <div>
+            
             <div class="images">
                 <img src="images/Rectangle 3.png" alt="">
                 <img src="images/Rectangle 4.png" alt="">
                 <img src="images/Rectangle 5.png" alt="">
-                <img src="images/Rectangle 6.png" alt="">
-                <img src="images/Rectangle 7.png" alt="">
-                <img src="images/Rectangle 8.png" alt="">
             </div>
         </div>
+         <div class="chobi">
+            <img src="images/Rectangle 6.png" alt="">
+            <img src="images/Rectangle 7.png" alt="">
+            <img src="images/Rectangle 8.png" alt="">
+         </div>
+
     </main>
 </body>
 </html>
