--- a/index.html
+++ b/index.html
@@ -80,7 +80,27 @@
             <img src="images/Rectangle 7.png" alt="">
             <img src="images/Rectangle 8.png" alt="">
          </div>
-
+         <div class="form">
+            <div>
+                <img src="images/Group 61.png" alt="">
+            </div>
+            <h3><b>Subscribe Newsletter</b></h3>
+            <p class="offer">Subcribe our website and get many offers. visit our website to know the amazing offers.</p>
+            <div>
+                <form>
+                    <label for="email"><input id="email" type="email" placeholder="user@gmail.com" ></label>
+                    <button class="sub">Subscribe</button>
+                </form>
+            </div>
+         </div>
     </main>
+    <footer>
+        <div>
+            <p>44, Big Building Roosevelt Street <br>
+                Beach Gardens Florida 33410</p>
+            <p>+00 123 584 124</p>
+            <p>www.website.com</p>
+        </div>
+    </footer>
 </body>
 </html>
