--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@400;700;800&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="style/style.css">
 </head>
@@ -94,6 +94,30 @@
             </div>
          </div>
     </main>
-    
+    <footer class="foot">
+        <div class="top">
+            <div>
+                <p class="address">44, Big Building Roosevelt Street 
+                    Beach Gardens Florida 33410</p>
+            </div>
+            <div class="icon">
+                <i class="fa-solid fa-phone">+00 123 584 124</i>
+                <br>
+                <i class="fa-solid fa-globe">www.website.com</i>
+            </div>
+        </div>
+        <div class="middle">
+            <div>
+                <img src="images/Facebook.png" alt="">
+                <img src="images/Instagram.png" alt="">
+                <img src="images/Twitter.png" alt="">
+                <img src="images/Linkedin.png" alt="">
+            </div>
+        </div>
+        <div class="bottom">
+            <p class="right">2017, All Rights Reserved.</p>
+            <p class="un">Unsubscribe</p>
+        </div>
+    </footer>
 </body>
 </html>
